# Knapsack-GA

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: knapsack.ipynb  knapsack_brue_force.ipynb  knapsack_ga.ipynb
src/knapsack/: __init__.py  algorithm.py  items.py
tests/: conftest.py  test_knapsack_ga.py  test_running_ga.py
