[project]
name = "knapsack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.0",
    "jupyterlab>=4.4.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyprojroot>=0.3.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "seaborn>=0.13.2",
]
